--- a/app/src/main/res/layout/activity_bmi_user.xml
+++ b/app/src/main/res/layout/activity_bmi_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_2"
-    tools:context=".BMIUser">
+    tools:context=".BMIUserActivity">
 
     <RelativeLayout
         android:id="@+id/logo"
@@ -43,8 +43,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="23dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="23dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -58,17 +57,18 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/currentHeight"
-            android:layout_width="wrap_content"
+            android:id="@+id/inputnumber_height"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:layout_marginBottom="36dp"
             android:fontFamily="@font/concert_one"
-            android:hint="170"
+            android:gravity="center_horizontal"
+            android:hint="00"
             android:inputType="number"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="#E1E1E1"
             android:textSize="40sp" />
 
         <TextView
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/currentHeight"
+            android:layout_toEndOf="@id/inputnumber_height"
             android:fontFamily="@font/concert_one"
             android:text="cm"
             android:textColor="@color/white"
@@ -92,8 +92,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="-162dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="-162dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -107,26 +106,26 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/currentweight"
-            android:layout_width="wrap_content"
+            android:id="@+id/inputnumber_weight"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:layout_marginBottom="37dp"
             android:fontFamily="@font/concert_one"
-            android:hint="70"
+            android:gravity="center_horizontal"
+            android:hint="00"
             android:inputType="number"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="#E1E1E1"
             android:textSize="40sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/currentweight"
+            android:layout_toEndOf="@id/inputnumber_weight"
             android:fontFamily="@font/concert_one"
             android:text="Kg"
             android:textColor="@color/white"
@@ -136,7 +135,7 @@
     </RelativeLayout>
 
     <android.widget.Button
-        android:id="@+id/calculatebmi"
+        android:id="@+id/button_next"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
