--- a/app/src/main/res/layout/activity_health_related.xml
+++ b/app/src/main/res/layout/activity_health_related.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_2"
-    tools:context=".HealthRelated">
+    tools:context=".HealthRelatedActivity">
 
     <RelativeLayout
         android:id="@+id/logo"
@@ -42,8 +42,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="-156dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="-156dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -115,7 +114,7 @@
     </RelativeLayout>
 
     <android.widget.Button
-        android:id="@+id/calculatebmi"
+        android:id="@+id/button_next"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
