--- a/app/src/main/res/layout/activity_weight_goal.xml
+++ b/app/src/main/res/layout/activity_weight_goal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_2"
-    tools:context=".WeightGoal">
+    tools:context=".WeightGoalActivity">
 
     <RelativeLayout
         android:id="@+id/logo"
@@ -41,8 +41,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -55,15 +54,18 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/currentweightgoal"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/edittext_weightgoal"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:layout_marginBottom="50dp"
+            android:ems="10"
             android:fontFamily="@font/concert_one"
-            android:text="55"
+            android:gravity="center_horizontal"
+            android:hint="00"
+            android:inputType="numberSigned"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold" />
@@ -73,21 +75,11 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginStart="20dp"
-            android:layout_toEndOf="@id/currentweightgoal"
+            android:layout_toEndOf="@id/edittext_weightgoal"
             android:fontFamily="@font/concert_one"
             android:text="Kg"
             android:textColor="@color/white"
             android:textSize="25sp" />
-
-        <SeekBar
-            android:id="@+id/seekbarforweightgoal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp"
-            android:progressTint="@color/orange" />
 
 
     </RelativeLayout>
@@ -99,8 +91,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="-141dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="-141dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -116,7 +107,7 @@
     </RelativeLayout>
 
     <android.widget.Button
-        android:id="@+id/calculatebmi"
+        android:id="@+id/button_next"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
