--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -42,8 +42,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="-155dp"
-        android:background="@drawable/cardbackground">
+        android:layout_marginBottom="-155dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -57,7 +56,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/currentHeight"
+            android:id="@+id/inputnumber_height"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -74,7 +73,7 @@
     </RelativeLayout>
 
     <android.widget.Button
-        android:id="@+id/calculatebmi"
+        android:id="@+id/button_next"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
@@ -87,7 +86,6 @@
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold" />
-
 
 
 </RelativeLayout>
