--- a/app/src/main/res/layout/detail_food.xml
+++ b/app/src/main/res/layout/detail_food.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailFood">
+    tools:context=".DetailFoodActivity">
 
     <ImageView
         android:layout_width="match_parent"
