--- a/app/src/main/res/layout/item_zumba.xml
+++ b/app/src/main/res/layout/item_zumba.xml
@@ -42,6 +42,7 @@
                 android:gravity="center_vertical"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
+                android:singleLine="true"
                 android:text="Title"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
@@ -64,6 +65,7 @@
             android:fontFamily="@font/amethysta"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
+            android:singleLine="true"
             android:text="Category"
             android:textColor="@color/black"
             android:textSize="15sp"
